--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "all-the-dice",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Zero dependency dice rolling library",
   "scripts": {
     "test": "jest",
@@ -27,5 +27,8 @@
     ]
   },
   "types": "dist/index.d.ts",
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "files": [
+    "dist/**/*"
+  ]
 }
